Fixed x overflow in experience on tablets. Removed more default properties from nav input

--- a/src/css/index.styl
+++ b/src/css/index.styl
@@ -78,6 +78,8 @@ nav
     border: none
     outline: none
     pointer-events: none
+    padding: 0
+    margin: 0
 
     @media (max-width: 1005px)
       max-width: 287px
@@ -226,6 +228,7 @@ section
 
 #experience
   justify-content: flex-start
+  overflow-x: hidden
 
   h1
     width: 100%
